--- a/baxter_kinect_calibration/package.xml
+++ b/baxter_kinect_calibration/package.xml
@@ -15,6 +15,7 @@
   <build_depend>cv_bridge</build_depend>
   <build_depend>cmake_modules</build_depend>
   <build_depend>eigen</build_depend>
+  <build_depend>eigen_conversions</build_depend>
   <build_depend>image_geometry</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>camera_info_manager</build_depend>
@@ -42,6 +43,7 @@
 
   <run_depend>cv_bridge</run_depend>
   <run_depend>eigen</run_depend>
+  <run_depend>eigen_conversions</run_depend>
   <run_depend>image_geometry</run_depend>
   <run_depend>image_transport</run_depend>
   <run_depend>camera_info_manager</run_depend>
